--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,4 @@
-altgraph @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot11/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-141/altgraph-0.17.2-py2.py3-none-any.whl
-blinker==1.9.0
-branca==0.8.0
-certifi==2024.8.30
-cffi==1.16.0
-charset-normalizer==3.4.0
-click==8.1.7
 Flask==3.1.0
 folium==0.18.0
-future @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot11/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-141/future-0.18.2-py3-none-any.whl
-geographiclib==2.0
-geopy==2.4.1
-gpxpy==1.6.2
-idna==3.10
-importlib_metadata==8.5.0
-itsdangerous==2.2.0
-Jinja2==3.1.4
-macholib @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot11/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-141/macholib-1.15.2-py2.py3-none-any.whl
-MarkupSafe==3.0.2
-numpy==1.26.0
-opencv-python==4.8.1.78
 polyline==2.0.2
-pycparser==2.21
-pygame==2.5.2
-pymunk==6.6.0
-requests==2.32.3
-six @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot11/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-141/six-1.15.0-py2.py3-none-any.whl
-urllib3==2.2.3
-Werkzeug==3.1.3
-xyzservices==2024.9.0
-zipp==3.21.0
+Requests==2.32.3
